# HjorthagshojdenLogger

./: README.md  ew1_reader.py  logger.py  pyproject.toml  registers.json  scan_registers.py  write_to_sheets.py
tests/: __init__.py  test_ew1_reader.py  test_logger.py  test_scan_registers.py  test_write_to_sheets.py
