[project]
name = "hjorthagshojdenlogger"
version = "0.1.0"
description = "Logs data from ERAB EW-1 DUC to Google Sheets via Modbus TCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gspread==5.12.4",
    "oauth2client==4.1.3",
    "pymodbus>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
